--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+button {
+  min-width: 150px;
+  min-height: 40px;
+  border-radius: 8px;
+  font-size: 22px;
+  background: aquamarine;
+}
