--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,18 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 100s linear;
+  }
+} */
+@media (prefers-reduced-motion: no-preference) {
+  button {
+    animation: App-logo-spin infinite 10s linear;
   }
 }
-
 .App-header {
-  background-color: #282c34;
+  background-color: #282c34ed;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -42,4 +46,18 @@ button {
   border-radius: 8px;
   font-size: 22px;
   background: aquamarine;
+  outline: transparent;
+  border: 1px solid transparent;
+  color: #2f00ff;
+  cursor: pointer;
+}
+button:hover {
+  transform: scaleX(1.1) scaleY(1.2);
+  border: 1px solid transparent;
+  outline: transparent;
+  opacity: 0.9;
+}
+.colorRed {
+  color: red;
+  background-color: #61dafb;
 }
