--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,20 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
+@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 100s linear;
   }
-} */
-@media (prefers-reduced-motion: no-preference) {
+}
+/* @media (prefers-reduced-motion: no-preference) {
   button {
     animation: App-logo-spin infinite 10s linear;
   }
-}
+} */
 .App-header {
   background-color: #282c34ed;
   min-height: 100vh;
@@ -50,6 +50,8 @@ button {
   border: 1px solid transparent;
   color: #2f00ff;
   cursor: pointer;
+  user-select: none;
+  text-align: center;
 }
 button:hover {
   transform: scaleX(1.1) scaleY(1.2);
@@ -60,4 +62,20 @@ button:hover {
 .colorRed {
   color: red;
   background-color: #61dafb;
+}
+input {
+  width: 300px;
+  height: 46px;
+  border-radius: 8px;
+  font-size: 20px;
+  margin: 24px;
+}
+* {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+li {
+  padding: 4px;
+  list-style: decimal-leading-zero;
 }
