--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,20 @@ li {
   padding: 4px;
   list-style: decimal-leading-zero;
 }
+.walk1 {
+  width: 150px;
+  height: 250px;
+  background-image: url(./EmLaPhao-min.png);
+  /* , url(./duongDua.png) */
+  background-repeat: no-repeat;
+  background-size: 2600px;
+  animation: w1Effect 3s steps(12) infinite;
+}
+@keyframes w1Effect {
+  from {
+    background-position: 0px;
+  }
+  to {
+    background-position: -2400px;
+  }
+}
