--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,7 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  margin-left: 30px;
 }
 .close {
   display: flex;
